--- a/src/app/layout/top-nav/top-nav.component.html
+++ b/src/app/layout/top-nav/top-nav.component.html
@@ -5,19 +5,18 @@
     <!-- Toggle button -->
     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#sidebarMenu"
       aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
+      <i class="bi bi-list"></i>
     </button>
 
     <!-- Brand -->
     <a class="navbar-brand" href="#">
-      <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="25" alt="MDB Logo"
-        loading="lazy" />
+      <img src="../../../assets/icons/bootstrap.svg" height="40" alt="Bootstrap Logo" loading="lazy" />
     </a>
     <!-- Search form -->
     <form class="d-none d-md-flex input-group w-auto my-auto">
-      <input autocomplete="off" type="search" class="form-control rounded" placeholder='Search (ctrl + "/" to focus)'
+      <input autocomplete="off" type="search" class="form-control rounded" placeholder='Search'
         style="min-width: 225px;" />
-      <span class="input-group-text border-0"><i class="fas fa-search"></i></span>
+      <span class="input-group-text border-0"><i class="bi bi-search m-1"></i></span>
     </form>
 
     <!-- Right links -->
@@ -26,8 +25,8 @@
       <li class="nav-item dropdown">
         <a class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button"
           data-mdb-toggle="dropdown" aria-expanded="false">
-          <i class="fas fa-bell"></i>
-          <span class="badge rounded-pill badge-notification bg-danger">1</span>
+          <i class="bi bi-bell-fill"></i>
+          <!-- <span class="badge rounded-pill badge-notification bg-danger">1</span> -->
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
           <li>
@@ -42,59 +41,6 @@
         </ul>
       </li>
 
-      <!-- Icon -->
-      <li class="nav-item">
-        <a class="nav-link me-3 me-lg-0" href="#">
-          <i class="fas fa-fill-drip"></i>
-        </a>
-      </li>
-      <!-- Icon -->
-      <li class="nav-item me-3 me-lg-0">
-        <a class="nav-link" href="#">
-          <i class="fab fa-github"></i>
-        </a>
-      </li>
-
-      <!-- Icon dropdown -->
-      <li class="nav-item dropdown">
-        <a class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow" href="#" id="navbarDropdown" role="button"
-          data-mdb-toggle="dropdown" aria-expanded="false">
-          <i class="united kingdom flag m-0"></i>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-          <li>
-            <a class="dropdown-item" href="#"><i class="united kingdom flag"></i>English
-              <i class="fa fa-check text-success ms-2"></i></a>
-          </li>
-          <li>
-            <hr class="dropdown-divider" />
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-poland flag"></i>Polski</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-china flag"></i>中文</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-japan flag"></i>日本語</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-germany flag"></i>Deutsch</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-france flag"></i>Français</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-spain flag"></i>Español</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-russia flag"></i>Русский</a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="#"><i class="flag-portugal flag"></i>Português</a>
-          </li>
-        </ul>
-      </li>
 
       <!-- Avatar -->
       <li class="nav-item dropdown">
