--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -1,44 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-    background-color: #fbfbfb;
+.form-control-dark {
+    border-color: var(--bs-gray);
 }
 
-@media (min-width: 991.98px) {
-    main {
-        padding-left: 240px;
-    }
+.form-control-dark:focus {
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
 }
 
-/* Sidebar */
-.sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    padding: 58px 0 0;
-    /* Height of navbar */
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-    width: 240px;
-    z-index: 600;
+.text-small {
+    font-size: 85%;
 }
 
-@media (max-width: 991.98px) {
-    .sidebar {
-        width: 100%;
-    }
+.dropdown-toggle:not(:focus) {
+    outline: 0;
 }
 
-.sidebar .active {
-    border-radius: 5px;
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+html,
+body,
+.container {
+    height: 100%;
 }
 
-.sidebar-sticky {
-    position: relative;
-    top: 0;
-    height: calc(100vh - 48px);
-    padding-top: 0.5rem;
-    overflow-x: hidden;
-    overflow-y: auto;
-    /* Scrollable contents if viewport is shorter than content. */
+.container {
+    display: table;
+    width: 100%;
+    margin-top: -50px;
+    padding: 50px 0 0 0;
+    /*set left/right padding according to needs*/
+    box-sizing: border-box;
+}
+
+.row {
+    height: 100%;
+    display: table-row;
+}
+
+.row .no-float {
+    display: table-cell;
+    float: none;
 }
