--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -1,33 +1,70 @@
-<!-- Sidebar -->
-<nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
-  <div class="position-sticky">
-    <div class="list-group list-group-flush mx-3 mt-4">
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple" aria-current="true">
-        <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+<div class="bg-body-tertiary border rounded-3">
+  <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <svg class="bi pe-none me-2" width="40" height="32">
+        <use xlink:href="#bootstrap" />
+      </svg>
+      <span class="fs-4">Sidebar</span>
+    </a>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li class="nav-item">
+        <a href="#" class="nav-link active" aria-current="page">
+          <svg class="bi pe-none me-2" width="16" height="16">
+            <use xlink:href="#home" />
+          </svg>
+          Home
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <svg class="bi pe-none me-2" width="16" height="16">
+            <use xlink:href="#speedometer2" />
+          </svg>
+          Dashboard
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <svg class="bi pe-none me-2" width="16" height="16">
+            <use xlink:href="#table" />
+          </svg>
+          Orders
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <svg class="bi pe-none me-2" width="16" height="16">
+            <use xlink:href="#grid" />
+          </svg>
+          Products
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-body-emphasis">
+          <svg class="bi pe-none me-2" width="16" height="16">
+            <use xlink:href="#people-circle" />
+          </svg>
+          Customers
+        </a>
+      </li>
+    </ul>
+    <hr>
+    <div class="dropdown">
+      <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+        <strong>mdo</strong>
       </a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple active">
-        <i class="fas fa-chart-area fa-fw me-3"></i><span>Webiste traffic</span>
-      </a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-lock fa-fw me-3"></i><span>Password</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-chart-line fa-fw me-3"></i><span>Analytics</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-        <i class="fas fa-chart-pie fa-fw me-3"></i><span>SEO</span>
-      </a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-chart-bar fa-fw me-3"></i><span>Orders</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-globe fa-fw me-3"></i><span>International</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-building fa-fw me-3"></i><span>Partners</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-calendar fa-fw me-3"></i><span>Calendar</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-users fa-fw me-3"></i><span>Users</span></a>
-      <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
-          class="fas fa-money-bill fa-fw me-3"></i><span>Sales</span></a>
+      <ul class="dropdown-menu text-small shadow">
+        <li><a class="dropdown-item" href="#">New project...</a></li>
+        <li><a class="dropdown-item" href="#">Settings</a></li>
+        <li><a class="dropdown-item" href="#">Profile</a></li>
+        <li>
+          <hr class="dropdown-divider">
+        </li>
+        <li><a class="dropdown-item" href="#">Sign out</a></li>
+      </ul>
     </div>
   </div>
-</nav>
-<!-- Sidebar -->
+</div>
