--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <div class="bg-body-tertiary border rounded-3">
-  <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+  <div class="d-flex flex-column  p-3" style="width: 280px;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
       <svg class="bi pe-none me-2" width="40" height="32">
         <use xlink:href="#bootstrap" />
