--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -14,13 +14,15 @@
         <li class="mb-1">
           <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
             data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-            Home
+            Config
           </button>
           <div class="collapse show" id="home-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Overview</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Updates</a></li>
-              <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a></li>
+              <li><a href="/config/slider"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Slider</a></li>
+              <li><a href="/config/featured-categories"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Featured Categories</a></li>
+              <!-- <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a></li> -->
             </ul>
           </div>
         </li>
