--- a/src/app/pages/config/slider/slider.component.html
+++ b/src/app/pages/config/slider/slider.component.html
@@ -1,3 +1,19 @@
-<p>
-  slider works!
-</p>
+<form style=" width: 100%; margin: 30px 30px;">
+  <div class="row">
+    <div class="form-group col-lg-5">
+      <label for="title">Title</label>
+      <input type="text" class="form-control" id="title" placeholder="Title">
+    </div>
+    <div class="form-group col-lg-5">
+      <label for="imageUrl">Image Url</label>
+      <input type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+    </div>
+    <div class="form-group col-lg-2 mt-4">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+
+  </div>
+
+</form>
+
+<app-table></app-table>
