--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -1,3 +1,60 @@
-<p>
-  featured-categories works!
-</p>
+<form style=" width: 100%; margin: 30px 30px;">
+  <div class="row">
+    <div class="form-group col-lg-5">
+      <label for="title">Title</label>
+      <input type="text" class="form-control" id="title" placeholder="Title">
+    </div>
+    <div class="form-group col-lg-5">
+      <label for="imageUrl">Image Url</label>
+      <input type="url" class="form-control" id="imageUrl" placeholder="Image Url">
+    </div>
+    <div class="form-group col-lg-2 mt-4">
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="row mt-3">
+    <div class="form-group col-lg-4">
+      <label class="mb-1" for="title">Sub Category</label>
+      <input type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
+    </div>
+
+    <div class="form-group col-lg-2 mt-4">
+      <button type="submit" class="btn btn-primary">Add</button>
+    </div>
+    <div class="form-group col-lg-2 offset-md-4 mt-4">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+
+
+  </div>
+
+  <div class="row">
+    <div class="form-group col-lg-6">
+      <app-table></app-table>
+    </div>
+
+    <!-- <div class="form-group col-lg-4">
+
+      <div style="display: flex; flex-direction: column; width: 50%;">
+        <button class="btn btn-primary" type="submit">Save</button>
+
+      </div>
+    </div> -->
+
+  </div>
+
+
+
+
+</form>
+
+<hr class="mt-5 mb-5">
+
+
+<app-table></app-table>
