--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -18,25 +18,31 @@
 
   </div>
 
-  <div class="row mt-3">
+  <div class="row justify-content-around mt-3">
     <div class="form-group col-lg-4">
       <label class="mb-1" for="title">Sub Category</label>
       <input type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
     </div>
 
-    <div class="form-group col-lg-2 mt-4">
+    <div class="form-group col-lg-1 mt-4 ml-auto offset-1">
+
       <button type="submit" class="btn btn-primary">Add</button>
     </div>
-    <div class="form-group col-lg-2 offset-md-4 mt-4">
-      <button type="submit" class="btn btn-primary">Save</button>
-    </div>
 
+    <div class="form-group col-lg-6 mt-4">
+      <div class="row">
+        <div class="col-12 offset-9">
+
+          <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
 
   </div>
 
   <div class="row">
-    <div class="form-group col-lg-6">
-      <app-table></app-table>
+    <div class="form-group col-lg-6 mt-2">
+      <app-sub-category-table></app-sub-category-table>
     </div>
 
     <!-- <div class="form-group col-lg-4">
