--- a/src/app/pages/config/sub-category-table/sub-category-table.component.html
+++ b/src/app/pages/config/sub-category-table/sub-category-table.component.html
@@ -1,22 +1,23 @@
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Country</th>
-      <th scope="col">Area</th>
-      <th scope="col">Population</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let country of countries; index as i">
-      <th scope="row">{{ i + 1 }}</th>
-      <td>
-        <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="me-2"
-          style="width: 20px" />
-        {{ country.name }}
-      </td>
-      <td>{{ country.area | number }}</td>
-      <td>{{ country.population | number }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="table-responsive">
+
+  <table class="table table-striped overflow-auto">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <tr *ngFor="let sc of sub_categories; index as i">
+
+        <th scope="row">{{ i + 1 }}</th>
+        <td>
+          {{ sc.name }}
+        </td>
+        <td> <i class="bi bi-pencil"></i>&nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
