--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -11,7 +11,7 @@
     <div class="form-group col-lg-2 mt-4">
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        <label class="form-check-label" for="exampleCheck1">is Package</label>
       </div>
     </div>
 
@@ -63,4 +63,6 @@
 <hr class="mt-5 mb-5">
 
 
-<app-table></app-table>
+<!-- <app-table></app-table> -->
+
+<app-category-table></app-category-table>
