--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -1,4 +1,4 @@
-<form style=" width: 100%; margin: 30px 30px;">
+<form style="width: 100%; margin: 30px 10px;">
   <div class="row">
     <div class="form-group col-lg-5">
       <label for="title">Title</label>
@@ -15,28 +15,21 @@
       </div>
     </div>
 
-
   </div>
 
-  <div class="row justify-content-around mt-3">
+  <div class="row mt-3">
     <div class="form-group col-lg-4">
       <label class="mb-1" for="title">Sub Category</label>
       <input type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
     </div>
 
-    <div class="form-group col-lg-1 mt-4 ml-auto offset-1">
-
-      <button type="submit" class="btn btn-primary">Add</button>
+    <div class="form-group col-lg-2 mt-4 offset-1">
+      <button type="button" class="btn btn-primary">
+        <i class="bi bi-plus-circle"></i>
+        Add
+      </button>
     </div>
 
-    <div class="form-group col-lg-6 mt-4">
-      <div class="row">
-        <div class="col-12 offset-9">
-
-          <button type="submit" class="btn btn-primary">Save</button>
-        </div>
-      </div>
-    </div>
 
   </div>
 
@@ -44,25 +37,12 @@
     <div class="form-group col-lg-6 mt-2">
       <app-sub-category-table></app-sub-category-table>
     </div>
-
-    <!-- <div class="form-group col-lg-4">
-
-      <div style="display: flex; flex-direction: column; width: 50%;">
-        <button class="btn btn-primary" type="submit">Save</button>
-
-      </div>
-    </div> -->
-
   </div>
 
-
-
+  <button type="submit" class="btn btn-primary btn-lg mt-3"><i class="bi bi-save"></i>&nbsp;Save</button>
 
 </form>
 
-<hr class="mt-5 mb-5">
-
-
-<!-- <app-table></app-table> -->
+<hr class="mt-2 mb-2">
 
 <app-category-table></app-category-table>
