--- a/src/app/pages/config/slider/slider.component.html
+++ b/src/app/pages/config/slider/slider.component.html
@@ -9,14 +9,16 @@
       <input type="url" class="form-control" id="imageUrl" placeholder="Image Url">
     </div>
     <div class="form-group col-lg-2 mt-4">
-      <button type="submit" class="btn btn-primary">Save</button>
+      <button type="submit" class="btn btn-primary">
+        <i class="bi bi-save"></i>
+        Save
+      </button>
     </div>
 
   </div>
 
 </form>
 
-<hr class="mt-5 mb-5">
+<hr class="mt-3 mb-3">
 
-
-<app-table></app-table>
+<app-category-table></app-category-table>
