--- a/src/app/pages/config/sub-category-table/sub-category-table.component.html
+++ b/src/app/pages/config/sub-category-table/sub-category-table.component.html
@@ -11,12 +11,12 @@
     <tbody>
 
       <tr *ngFor="let sc of sub_categories; index as i">
-
         <th scope="row">{{ i + 1 }}</th>
         <td>
           {{ sc.name }}
         </td>
-        <td> <i class="bi bi-pencil"></i>&nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i></td>
+        <td> &nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+        </td>
       </tr>
     </tbody>
   </table>
