--- a/src/app/layout/top-nav/top-nav.component.html
+++ b/src/app/layout/top-nav/top-nav.component.html
@@ -1,30 +1,17 @@
 <header class="py-3 mb-3 border-bottom">
   <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
-    <div class="dropdown">
-      <a href="#"
-        class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle"
-        data-bs-toggle="dropdown" aria-expanded="false">
-        <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="#bootstrap" />
-        </svg>
-      </a>
-      <ul class="dropdown-menu text-small shadow">
-        <li><a class="dropdown-item active" href="#" aria-current="page">Overview</a></li>
-        <li><a class="dropdown-item" href="#">Inventory</a></li>
-        <li><a class="dropdown-item" href="#">Customers</a></li>
-        <li><a class="dropdown-item" href="#">Products</a></li>
-        <li>
-          <hr class="dropdown-divider">
-        </li>
-        <li><a class="dropdown-item" href="#">Reports</a></li>
-        <li><a class="dropdown-item" href="#">Analytics</a></li>
-      </ul>
-    </div>
+    <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 ">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="40" fill="currentColor" class="bi bi-bootstrap"
+        viewBox="0 0 16 16">
+        <path
+          d="M5.062 12h3.475c1.804 0 2.888-.908 2.888-2.396 0-1.102-.761-1.916-1.904-2.034v-.1c.832-.14 1.482-.93 1.482-1.816 0-1.3-.955-2.11-2.542-2.11H5.062V12zm1.313-4.875V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23H6.375zm0 3.762V8.162h1.822c1.236 0 1.887.463 1.887 1.348 0 .896-.627 1.377-1.811 1.377H6.375z" />
+        <path
+          d="M0 4a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4zm4-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V4a3 3 0 0 0-3-3H4z" />
+      </svg>
+    </a>
 
-    <div class="d-flex align-items-center">
-      <form class="w-100 me-3" role="search">
-        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-      </form>
+
+    <div class="d-flex">
 
       <div class="flex-shrink-0 dropdown">
         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
