--- a/src/app/pages/config/category-table/category-table.component.html
+++ b/src/app/pages/config/category-table/category-table.component.html
@@ -1,7 +1,7 @@
 <div style=" width: 90%; margin: 30px 30px;">
   <form>
     <div class="mb-3 row">
-      <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label">Full text search:</label>
+      <!-- <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label">Full text search:</label> -->
       <div class="col-xs-3 col-sm-auto">
         <input id="table-complete-search" type="text" class="form-control" name="searchTerm" placeholder="Search"
           [(ngModel)]="service.searchTerm" />
@@ -15,6 +15,7 @@
           <th scope="col" sortable="id" (sort)="onSort($event)">#</th>
           <th scope="col" sortable="title" (sort)="onSort($event)">Title</th>
           <th scope="col">Image URL</th>
+          <th scope="col">Actions</th>
 
         </tr>
       </thead>
@@ -26,6 +27,9 @@
           </td>
           <td>{{cat.imageUrl}}</td>
 
+          <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+          </td>
+
         </tr>
       </tbody>
     </table>
@@ -35,9 +39,9 @@
       </ngb-pagination>
 
       <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
-        <option [ngValue]="2">2 items per page</option>
-        <option [ngValue]="4">4 items per page</option>
-        <option [ngValue]="6">6 items per page</option>
+        <option [ngValue]="5">5 items per page</option>
+        <option [ngValue]="10">10 items per page</option>
+        <option [ngValue]="20">20 items per page</option>
       </select>
     </div>
   </form>
