Locations Page routing

--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -61,6 +61,10 @@
                 <a href="/featured-categories"
                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">Featured Categories</a>
               </li>
+
+              <li>
+                <a href="/locations" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Locations</a>
+              </li>
               <!-- <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a></li> -->
             </ul>
           </div>
