--- a/src/app/pages/config/featured-categories/featured-categories.component.html
+++ b/src/app/pages/config/featured-categories/featured-categories.component.html
@@ -1,4 +1,4 @@
-<form style="width: 100%; margin: 30px 10px;">
+<form style="width: 100%; margin: 30px 30px;">
   <div class="row">
     <div class="form-group col-lg-5">
       <label for="title">Title</label>
@@ -11,7 +11,7 @@
     <div class="form-group col-lg-2 mt-4">
       <div class="form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">is Package</label>
+        <label class="form-check-label" for="exampleCheck1">Package</label>
       </div>
     </div>
 
