--- a/src/app/pages/config/locations/locations.component.html
+++ b/src/app/pages/config/locations/locations.component.html
@@ -1,3 +1,20 @@
-<p>
-  locations works!
-</p>
+<form style="width: 100%; margin: 30px 30px;">
+  <div class="row">
+    <div class="form-group col-lg-10">
+      <label for="title">Title</label>
+      <input type="text" class="form-control" id="title" placeholder="Title">
+    </div>
+    <div class="form-group col-lg-2 mt-4">
+      <button type="submit" class="btn btn-primary">
+        <i class="bi bi-save"></i>
+        Save
+      </button>
+    </div>
+
+  </div>
+
+</form>
+
+<hr class="mt-3 mb-3">
+
+<app-location-table></app-location-table>
