--- a/src/app/layout/top-nav/top-nav.component.html
+++ b/src/app/layout/top-nav/top-nav.component.html
@@ -26,7 +26,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
+          <li><a class="dropdown-item" href="javascript:void(0);" (click)="signOut()">Sign out</a></li>
         </ul>
       </div>
     </div>
