product Form continue...

--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -65,7 +65,9 @@
               <li>
                 <a href="/locations" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Locations</a>
               </li>
-              <!-- <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a></li> -->
+              <li>
+                <a href="/products" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Products</a>
+              </li>
             </ul>
           </div>
         </li>
