--- a/src/app/pages/config/product/product.component.html
+++ b/src/app/pages/config/product/product.component.html
@@ -14,13 +14,17 @@
   </div>
   <div class="row mt-3">
     <div class="form-group col-lg-6">
-      <label class="mb-2" for="title-english">Title(English)</label>
-      <input type="text" class="form-control" id="title-english" placeholder="Title(English)">
+      <label class="mb-2" for="title-english">Product Category</label>
+      <ng-select [items]="productCategories" bindLabel="title" bindValue="id" [virtualScroll]="true"
+        placeholder="Product Category" [(ngModel)]="selectedCategory">
+      </ng-select>
     </div>
 
     <div class="form-group col-lg-6">
-      <label class="mb-2" for="title-urdu">Title(Urdu)</label>
-      <input type="text" class="form-control" id="title-urdu" placeholder="Title(Urdu)">
+      <label class="mb-2" for="title-english">Product Sub-Category</label>
+      <ng-select [items]="productCategories" [multiple]="true" bindLabel="title" bindValue="id" [virtualScroll]="true"
+        placeholder="Sub Categorie(s)" [(ngModel)]="selectedCategory">
+      </ng-select>
     </div>
 
   </div>
@@ -33,9 +37,14 @@
   </div>
 
   <div class="row mt-3">
-    <div class="form-group col-lg-4">
-      <label class="mb-1" for="title">Sub Category</label>
-      <input type="text" class="form-control" id="Sub Category" placeholder="Sub Category">
+    <h4>Product Sub Category</h4>
+    <div class="form-group col-lg-2">
+      <label class="mb-1" for="weight">Weight</label>
+      <input type="number" class="form-control" id="Sub Category" placeholder="Weight">
+    </div>
+    <div class="form-group col-lg-2">
+      <label class="mb-1" for="price">Price</label>
+      <input type="number" class="form-control" id="price" placeholder="Price">
     </div>
 
     <div class="form-group col-lg-2 mt-4 offset-1">
