Category and sub Category

--- a/src/app/pages/config/product/product.component.html
+++ b/src/app/pages/config/product/product.component.html
@@ -1,5 +1,5 @@
 <form style="width: 95%; margin: 30px 30px;">
-  <h2> Products</h2>
+  <h3> Add Product</h3>
   <div class="row">
     <div class="form-group col-lg-6">
       <label class="mb-2" for="title-english">Title(English)</label>
@@ -59,7 +59,7 @@
 
   <div class="row">
     <div class="form-group col-lg-6 mt-2">
-      <app-sub-category-table></app-sub-category-table>
+      <app-product-sub-category-table></app-product-sub-category-table>
     </div>
   </div>
 
