--- a/src/app/pages/products/products-list/products-list.component.html
+++ b/src/app/pages/products/products-list/products-list.component.html
@@ -1,3 +1,70 @@
-<p>
-  products-list works!
-</p>
+<div class="container">
+  <h3>Product List</h3>
+  <hr>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <table class="table table-responsive">
+        <thead>
+          <tr>
+            <th>Title (English)</th>
+            <th>Title (Urdu)</th>
+            <th>Category</th>
+            <th>Sub-Category</th>
+            <th>Image URL</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Product 1 (English)</td>
+            <td>مصنوعات 1 (Urdu)</td>
+            <td>Category 1</td>
+            <td>Sub-Category 1</td>
+            <td>https://dummyimage.com/100x100/000/fff.png</td>
+            <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Product 2 (English)</td>
+            <td>مصنوعات 2 (Urdu)</td>
+            <td>Category 2</td>
+            <td>Sub-Category 2</td>
+            <td>https://dummyimage.com/100x100/000/fff.png</td>
+            <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Product 3 (English)</td>
+            <td>مصنوعات 3 (Urdu)</td>
+            <td>Category 3</td>
+            <td>Sub-Category 3</td>
+            <td>https://dummyimage.com/100x100/000/fff.png</td>
+            <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Product 4 (English)</td>
+            <td>مصنوعات 4 (Urdu)</td>
+            <td>Category 4</td>
+            <td>Sub-Category 4</td>
+            <td>https://dummyimage.com/100x100/000/fff.png</td>
+            <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Product 5 (English)</td>
+            <td>مصنوعات 5 (Urdu)</td>
+            <td>Category 5</td>
+            <td>Sub-Category 5</td>
+            <td>https://dummyimage.com/100x100/000/fff.png</td>
+            <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
