Order Detail/ Invoice

--- a/src/app/pages/orders/live-orders/live-orders.component.html
+++ b/src/app/pages/orders/live-orders/live-orders.component.html
@@ -41,7 +41,7 @@
                   <td>$25.00</td>
                   <td>456 Elm Street</td>
                   <td>
-                    <span class="badge bg-info">Shipped</span>
+                    <span class="badge bg-info">In Transit</span>
                   </td>
                   <td><i class="bi bi-eye" style="color: #0d6efd;"></i> &nbsp;&nbsp;&nbsp;<i
                       class="bi bi-person-up"></i>
