--- a/src/app/pages/orders/order-detail/order-detail.component.html
+++ b/src/app/pages/orders/order-detail/order-detail.component.html
@@ -1,3 +1,50 @@
-<p>
-  order-detail works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12 offset-sm-11">
+      <a routerLink="/orders" class="btn btn-primary float-right mt-2"><i class="bi bi-arrow-left-square"></i> Back</a>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-6">
+      <h3>Order #{{ order.id }}</h3>
+      <p><strong>Customer Name:</strong> {{ order.customerName }}</p>
+      <p><strong>Phone Number:</strong> {{ order.phoneNumber }}</p>
+      <p><strong>Delivery Address:</strong> {{ order.deliveryAddress }}</p>
+      <p><strong>Delivery Status:</strong> <span class="badge bg-info mx-1"> {{ order.deliveryStatus }}</span>
+      </p>
+      <p><strong>Assigned Delivery Guy:</strong> {{ order.deliveryGuy }}</p>
+    </div>
+    <div class="col-md-6 text-right">
+      <h4>Order Total: {{ order.totalPrice | currency }}</h4>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-md-12">
+      <table class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Product</th>
+            <th>Quantity</th>
+            <th>Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of order.items">
+            <td>{{ item.id }}</td>
+            <td>{{ item.productName }}</td>
+            <td>{{ item.quantity }}</td>
+            <td>{{ item.price | currency }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <hr>
+    <div class="col-md-12 offset-6">
+      <h4>Order Total: {{ order.totalPrice | currency }}</h4>
+
+    </div>
+  </div>
+</div>
