--- a/src/app/shared/errors/errors.component.html
+++ b/src/app/shared/errors/errors.component.html
@@ -1,5 +1,6 @@
-<div *ngIf="isSubmitted && form_control?.errors">
-  <!-- <span class="text-danger" *ngIf="form_control?.errors?.[required]">Field is required</span> -->
+<div *ngIf="isSubmitted && form_control.errors">
+  <span class="text-danger" *ngIf="form_control.errors.required">Field is required</span>
+  <span class="text-danger" *ngIf="form_control.errors.pattern">Invalid Data</span>
   <!-- <span class="text-danger" *ngIf="form_control?.errors?.[email]">Email must be a valid email address </span> -->
   <!-- <span class="text-danger" *ngIf="form_control.errors.confirmPasswordValidator">
     Password and Confirm Password didn't match.
