--- a/src/app/pages/config/common/slider-table/slider-table.component.html
+++ b/src/app/pages/config/common/slider-table/slider-table.component.html
@@ -1,7 +1,6 @@
 <div style=" width: 90%; margin: 30px 30px;">
   <form>
     <div class="mb-3 row">
-      <!-- <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label">Full text search:</label> -->
       <div class="col-xs-3 col-sm-auto">
         <input id="table-complete-search" type="text" class="form-control" name="searchTerm" placeholder="Search"
           [(ngModel)]="service.searchTerm" />
@@ -27,7 +26,9 @@
           </td>
           <td>{{slider.imageUrl}}</td>
 
-          <td><i class="bi bi-pencil"></i> &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
+          <td>
+            <i class="bi bi-pencil" href="javascript:void(0)" (click)="onEditClick(slider)"></i>
+            &nbsp;&nbsp;&nbsp;<i class="bi bi-trash3" style="color: red;"></i>
           </td>
 
         </tr>
