--- a/src/app/pages/config/slider/slider.component.html
+++ b/src/app/pages/config/slider/slider.component.html
@@ -17,7 +17,7 @@
 
     <!-- Save Button -->
     <div class="form-group col-lg-2 mt-4">
-      <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="bi bi-save"></i>Save</button>
+      <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="bi bi-save"></i>&nbsp;Save</button>
     </div>
 
   </div>
@@ -26,4 +26,4 @@
 
 <hr class="mt-3 mb-3">
 
-<app-slider-table></app-slider-table>
+<app-slider-table (editSlider)="editClick($event)"></app-slider-table>
