--- a/src/app/pages/config/slider/slider.component.html
+++ b/src/app/pages/config/slider/slider.component.html
@@ -17,7 +17,8 @@
 
     <!-- Save Button -->
     <div class="form-group col-lg-2 mt-4">
-      <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="bi bi-save"></i>&nbsp;Save</button>
+      <button type="submit" class="btn btn-primary" (click)="onSubmit()"><i class="bi bi-save"></i>&nbsp;
+        {{buttonTitle}} </button>
     </div>
 
   </div>
