--- a/src/app/pages/config/locations/locations.component.html
+++ b/src/app/pages/config/locations/locations.component.html
@@ -1,21 +1,25 @@
-<form [formGroup]="form" style="width: 100%; margin: 30px 30px;">
-  <div class="row">
-    <div class="form-group col-lg-10">
-      <label for="title">Title</label>
-      <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
-      <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
-    </div>
-    <div class="form-group col-lg-2 mt-4">
-      <button type="submit" class="btn btn-primary" (click)="onSubmit()">
-        <i class="bi bi-save"></i>
-        Save
-      </button>
+<div>
+
+  <h3 class="mx-3 mt-3">Locations</h3>
+  <form [formGroup]="form" style="width: 100%; margin: 30px 30px;">
+    <div class="row">
+      <div class="form-group col-lg-10">
+        <label for="title">Title</label>
+        <input formControlName="title" type="text" class="form-control" id="title" placeholder="Title">
+        <app-errors [form_control]="f['title']" [isSubmitted]="isFormSubmit"></app-errors>
+      </div>
+      <div class="form-group col-lg-2 mt-4">
+        <button type="submit" class="btn btn-primary" (click)="onSubmit()">
+          <i class="bi bi-save"></i>
+          {{buttonTitle}}
+        </button>
+      </div>
+
     </div>
 
-  </div>
-
-</form>
+  </form>
+</div>
 
 <hr class="mt-3 mb-3">
 
-<app-location-table></app-location-table>
+<app-location-table (editLocation)="editClick($event)"></app-location-table>
