--- a/src/app/layout/side-bar/side-bar.component.html
+++ b/src/app/layout/side-bar/side-bar.component.html
@@ -112,6 +112,22 @@
             </ul>
           </div>
         </li>
+
+        <!-- Riders -->
+        <li class="mb-1">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+            (click)="navigateRiders()" data-bs-toggle="collapse" data-bs-target="#rider-collapse" aria-expanded="true">
+            Riders
+          </button>
+          <div class="collapse show" id="rider-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li>
+                <a href="/riders/" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Riders</a>
+              </li>
+
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
